@startuml

title __BULLET's Class Diagram__\n

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace bullet {
        class com.example.aircraftwar.JavaCode.edu.hitsz.bullet.BaseBullet {
            - power : int
            + BaseBullet()
            + forward()
            + getPower()
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace bullet {
        class com.example.aircraftwar.JavaCode.edu.hitsz.bullet.EnemyBullet {
            + EnemyBullet()
            + update()
        }
      }
    }
  }
  

  namespace com.example.aircraftwar {
    namespace JavaCode.edu.hitsz {
      namespace bullet {
        class com.example.aircraftwar.JavaCode.edu.hitsz.bullet.HeroBullet {
            + HeroBullet()
        }
      }
    }
  }
  

  com.example.aircraftwar.JavaCode.edu.hitsz.bullet.BaseBullet -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.basic.AbstractFlyingObject
  com.example.aircraftwar.JavaCode.edu.hitsz.bullet.EnemyBullet .up.|> com.example.aircraftwar.JavaCode.edu.hitsz.observer.Subscriber
  com.example.aircraftwar.JavaCode.edu.hitsz.bullet.EnemyBullet -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.bullet.BaseBullet
  com.example.aircraftwar.JavaCode.edu.hitsz.bullet.HeroBullet -up-|> com.example.aircraftwar.JavaCode.edu.hitsz.bullet.BaseBullet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
